@@ -1,3 +1,6 @@
+5372.	[bug]		Fix migration from existing DNSSEC key files using
+			auto-dnssec maintain to dnssec-policy. [GL #1706]
+
 5371.	[bug]		Improve incremental updates of the RPZ summary
 			database to reduce delays that could occur when
 			a policy zone update included a large number of
